--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css"
 
-
+   
 
 </head>
 <head>
@@ -52,12 +52,9 @@
     <p>for any help<br>
     <a href="awamlehad@icloud.com">Awamelhad@icloud.com</a></p>
   </footer>
-  <script src="todo-project/app.js"></script>
+  <script src="java.js"></script>
 </body>
 </head>
 
 
-
-
-</footer>
 </html>
